Numerous UI tweaks and fixes
